--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -1,19 +1,21 @@
 {
   "name": "react-todo",
-
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  
   "devDependencies": {
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.2.15",
-  
+    "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.7.0"
-  }, 
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "jest" 
+    "test": "jest"
   }
 }
